# rotms-ros

./: .gitignore  LICENSE  README.md  rotms-doxygen-config  src_to_ws.bash
rotms_robot_ros_comm_decode/: CMakeLists.txt  config_comm_decode.yaml  package.xml
rotms_robot_ros_comm_decode/include/rotms_robot_ros_comm_decode/: decode_node.hpp  function_map_medimg.hpp  function_map_robctrl.hpp
rotms_robot_ros_comm_decode/launch/: comm_decode_nodes.launch
rotms_robot_ros_comm_decode/src/: decode_node.cpp  function_map_medimg.cpp  function_map_robctrl.cpp  function_map_targetviz.cpp
rotms_robot_ros_comm_decode/src/nodes/: node_decode_medimg.cpp  node_decode_robctrl.cpp  node_decode_targetviz.cpp
rotms_robot_ros_interface/: CMakeLists.txt  config.yaml  package.xml
rotms_robot_ros_interface/include/rotms_robot_ros_interface/: kst_servoing.hpp  rotms_robot_ros_interface.hpp
rotms_robot_ros_interface/launch/: interface_nodes.launch
rotms_robot_ros_interface/src/: kst_servoing.cpp  rotms_robot_ros_interface.cpp
rotms_robot_ros_interface/src/nodes/: node.cpp  node_robot.cpp  node_robot_end.cpp
rotms_ros_comm_decode/: CMakeLists.txt  config_comm_decode.yaml  package.xml  rotms_ros_comm_decode
rotms_ros_comm_decode/include/rotms_ros_comm_decode/: function_map_medimg.hpp  function_map_mep.hpp  function_map_robctrl.hpp  function_map_targetviz.hpp
rotms_ros_comm_decode/launch/: comm_decode_nodes.launch
rotms_ros_comm_decode/src/: decode_node.cpp  function_map_medimg.cpp  function_map_mep.cpp  function_map_robctrl.cpp  function_map_targetviz.cpp
rotms_ros_comm_decode/src/nodes/: node_decode_mep.cpp  node_decode_robctrl.cpp
rotms_ros_comm_relay/: CMakeLists.txt  package.xml
rotms_ros_comm_relay/launch/: comm_relay_nodes.launch
rotms_ros_comm_relay/src/nodes/: node_comm_relay.cpp
rotms_ros_dispatcher/: CMakeLists.txt  package.xml  rotms_ros_dispatcher
rotms_ros_dispatcher/include/rotms_ros_dispatcher/: dispatcher_utility.hpp  registration_funcs.hpp  rotms_dispatcher.hpp
rotms_ros_dispatcher/launch/: dispatcher_nodes.launch
rotms_ros_dispatcher/share/cache/: pointpair.yaml
rotms_ros_dispatcher/share/data/: pointpair_00000000_0000PM.yaml  reg_20220620_0553PM.yaml  reg_20220621_1233AM.yaml
rotms_ros_dispatcher/src/: dispatcher_utility.cpp  registration_funcs.cpp  rotms_dispatcher.cpp
rotms_ros_dispatcher/src/nodes/: node.cpp  node_dispatcher.cpp
rotms_ros_kinematics/: CMakeLists.txt  package.xml  rotms_ros_kinematics
rotms_ros_kinematics/include/rotms_ros_kinematics/: transform_conversions.hpp
rotms_ros_kinematics/launch/: kinematics_nodes.launch
rotms_ros_kinematics/share/: ptr_ptrtip.yaml  tool_toolref.yaml  tool_toolref.yaml.femur  toolref_eff.yaml
rotms_ros_kinematics/share/backups/: tool_toolref.yaml.femur  toolref_eff.yaml.femur
rotms_ros_kinematics/src/: transform_conversions.cpp
rotms_ros_kinematics/src/nodes/: node_TRE_t_body_ptrtip.cpp  node_calibration_data.cpp  node_calibration_data_tf.cpp  node_opttracker_tr_bodyref_ptrtip.cpp  node_polaris_tr_bodyref_ptrtip.cpp  node_robot_eff.cpp  node_sensor_data_tf.cpp  node_viz_tr_body_tool.cpp  node_viz_tr_body_tool_test.cpp  node_viz_tr_head_tool.cpp
rotms_ros_misc/: CMakeLists.txt  package.xml
rotms_ros_misc/launch/: misc_nodes.launch
rotms_ros_misc/src/nodes/: node_mep_request_save_poses.cpp  node_posedatalog_request_save_poses.cpp
rotms_ros_msgs/: CMakeLists.txt  package.xml  rotms_ros_msgs
rotms_ros_msgs/msg/: PoseValid.msg
rotms_ros_msgs/srv/: GetEFF.srv  GetJnts.srv
rotms_ros_operations/: CMakeLists.txt  package.xml  rotms_ros_operations
rotms_ros_operations/include/rotms_ros_operations/: operations.hpp  operations_digitization.hpp  operations_registration.hpp  operations_robot.hpp  operations_tms.hpp  operations_tool.hpp  operations_toolplan.hpp  operations_utility.hpp  registration_funcs.hpp  rotms_operations.hpp
rotms_ros_operations/share/cache/: landmarkdig.bak.yaml  landmarkdig.yaml  landmarkplan.bak.yaml  landmarkplan.yaml
rotms_ros_operations/share/config/: icpdig.yaml  initjnts.yaml  landmarkdig_20220710_0445PM.yaml  reg.yaml  toolpose.yaml  toolpose_20220701_0629PM.yaml
rotms_ros_operations/share/data/: landmarkplan_20220628_0403PM.yaml  landmarkplan_20220628_0455PM.yaml  landmarkplan_20220628_0928PM.yaml  landmarkplan_20220628_0949PM.yaml  reg_00000000_0000PM.yaml  reg_20220628_0937PM.yaml
rotms_ros_operations/src/: operations.cpp  operations_digitization.cpp  operations_registration.cpp  operations_robot.cpp  operations_tms.cpp  operations_tool.cpp  operations_toolplan.cpp  operations_utility.cpp  registration_funcs.cpp  rotms_operations.cpp
rotms_ros_operations/src/nodes/: test_node_operations.cpp
rotms_ros_robot_interface/: CMakeLists.txt  package.xml  rotms_ros_robot_interface
rotms_ros_robot_interface/include/rotms_ros_robot_interface/: rotms_ros_robot_interface.hpp
rotms_ros_robot_interface/launch/: interface_nodes.launch
rotms_ros_robot_interface/src/: rotms_ros_robot_interface.cpp
rotms_ros_robot_interface/src/nodes/: node_fri_trajectory.cpp  node_robot.cpp  node_robot_end.cpp
rotms_ros_state/: CMakeLists.txt  package.xml  rotms_ros_state
rotms_ros_state/include/rotms_ros_state/: flag_machine.hpp  (+20 more)
rotms_ros_state/src/: flag_machine.cpp  flag_machine_digitization.cpp  flag_machine_registration.cpp  flag_machine_robot.cpp  flag_machine_tms.cpp  flag_machine_tool.cpp  flag_machine_toolplan.cpp  state_machine.cpp  state_machine_digitization.cpp  state_machine_digitization_states.cpp  state_machine_registration.cpp  state_machine_registration_states.cpp  state_machine_robot.cpp  state_machine_robot_states.cpp  state_machine_states.cpp  state_machine_tms.cpp  state_machine_tms_states.cpp  state_machine_tool.cpp  state_machine_tool_states.cpp  state_machine_toolplan.cpp  state_machine_toolplan_states.cpp
rotms_ros_universal_utility/: CMakeLists.txt  package.xml  rotms_ros_universal_utility
rotms_ros_utility/: CMakeLists.txt  icp_config.yaml  package.xml  rotms_ros_utility
rotms_ros_utility/launch/: utility_nodes.launch
(+1716 files in other folders)
