<?xml version="1.0"?>
<package format="2">
  <name>rotms_ros_msgs</name>
  <version>0.0.0</version>
  <description>The rotms_ros_msgs package</description>
  <maintainer email="yliu333@jhu.edu">yl</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>